--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.pigirlittle</groupId>
 	<artifactId>HibernateSQLite</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<version>1.0</version>
 	<name>HibernateSQLite Maven App</name>
 	<url>http://maven.apache.org</url>
